# generative-art

./: README.md  makefile  pyproject.toml
docs/: 404.html  index.html  sitemap.xml
docs/Notes/axidraw/: index.html
docs/search/: search_index.json
docs/site/: 404.html  index.html
docs/site/sketches/sketch001/: index.html
docs/sketches/sketch001/: index.html
docs/sketches/sketch002/: index.html
docs/sketches/sketch003/: index.html
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/Notes/: axidraw.md
documentation/docs/sketches/: sketch001.md  sketch002.md  sketch003.md
documentation/site/: 404.html
documentation/site/sketches/sketch001/: index.html
documentation/site/sketches/sketch002/: index.html
render/: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
render/base/: figures.tex.jinja  main.tex.jinja
render/render/: render.py
sketches/sketch001/code/: package.json  readme.md
sketches/sketch001/output1/: figures.tex  main.tex
sketches/sketch001/output2/: figures.tex
sketches/sketch001/output3/: figures.tex
sketches/sketch002/output1/: figures.tex
sketches/sketch002/output2/: figures.tex
sketches/sketch002/output3/: figures.tex
sketches/sketch002/output4/: figures.tex  main.tex
sketches/sketch003/code/public/: index.html
sketches/sketch003/output1/: figures.tex
sketches/sketch003/output2/: figures.tex
sketches/sketch003/output3/: figures.tex  main.tex
sketches/template/: README.md  package.json
sketches/template/public/: style.css
(+14 files in other folders)
