[tool.poetry]
name = "render"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["NicklasXYZ"]

keywords = []

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
sphinx = "^2.2"
sphinx-autoapi = "^1.3.0"
tomlkit = "^0.6"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 80

[tool.pytest.ini_options]
# Directories that are not visited by pytest collector:
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__"

# Extra options:
addopts = [
  "--strict-markers",
  "--doctest-modules",
]
